// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Badge Snapshot Tests > matches snapshot for default badge > default-badge 1`] = `
<div
>

  <span
    class="_badge--information_HASH_23 _badge--md_HASH_56 _badge_HASH_2"
    data-ods="badge"
    data-testid="badge"
  >Active
  </span
  >
  </div
  >
`;

exports[`Badge Snapshot Tests > matches snapshot for loading badge > loading-badge 1`] = `
<div
>

  <div
    aria-hidden="true"
    class="_skeleton_HASH_2"
    data-ods="skeleton"
    data-testid="badge"
  >
  </div
  >
  </div
  >
`;

exports[`Badge Snapshot Tests > matches snapshot for success color and large size > success-lg-badge 1`] = `
<div
>

  <span
    class="_badge--lg_HASH_61 _badge--success_HASH_43 _badge_HASH_2"
    data-ods="badge"
    data-testid="badge"
  >Success
  </span
  >
  </div
  >
`;
